--- a/index.html
+++ b/index.html
@@ -1,22 +1,21 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<!-- saved from url=(0050) -->
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="renderer" content="webkit">
     <title>黄诗琦</title>
     <link href="css/home.css" rel="stylesheet" type="text/css">
     <link href="css/default.css" rel="stylesheet" type="text/css">
     <link href="css/responsive.css" rel="stylesheet" type="text/css">
     <link href="css/animations.css" rel="stylesheet" type="text/css">
     <link href="css/swiper.min.css" rel="stylesheet" type="text/css">
-    <meta name="author" content="Jordan Flaig">
-    <meta name="description" content="Web &amp; Mobile Designer, CSS Developer, and 8 Year Photoshop Veteran.">
-    <meta name="keywords" content="HTML,CSS,Web Design,Mobile Design,Developer,Photoshop,Verteran,Specialist,Expert,Web,Mobile,Responsive,Portfolio,Blog,Jordan,Flaig,Flag,Salisbury,Maryland,Mardela Springs,Delmarva,Delaware,Ocean City,Eastern Shore">
     <script src="js/jquery-1.9.1.min.js" type="text/javascript"></script>
     <script src="js/jquery.js" type="text/javascript"></script>
     <script src="js/swiper.min.js"></script>
-</head> 
+</head>
+
 <body id="idElement1" style="width: 1016px;">
     <!-- Like Social & Navigation. Bitch. -->
     <nav style="height: 629px;">
@@ -81,12 +80,12 @@
     <div id="idElement3" class="content hobbies" style="height: 397px;">
         <h1 class="align_fix">兴趣爱好Hobbies</h1>
         <p>
-        <ul>
-            <li class="world">去人少的地方旅行</li>
-            <li class="gym">坐在咖啡店工作一整天</li>
-            <li class="coffee">偶尔会打打羽毛球</li>
-            <li class="xbox">爬山也很有趣</li>
-        </ul>
+            <ul>
+                <li class="world">去人少的地方旅行</li>
+                <li class="gym">坐在咖啡店工作一整天</li>
+                <li class="coffee">偶尔会打打羽毛球</li>
+                <li class="xbox">爬山也很有趣</li>
+            </ul>
     </div>
     <div id="idElement4" class="content gymApp_2" style="height: 397px;padding-top: 100px;">
         <!-- Slider main container -->
@@ -255,18 +254,24 @@
             nextButton: '.swiper-button-next',
             prevButton: '.swiper-button-prev'
         });
+
+        var str = navigator.userAgent;
+        var grep = /(IEMobile)|(MeeGo)|(Nokia)|(iPhone)|(Android)/;
+
+        if (str.match(grep)) {
+            window.location.href = "m_index.html";
+        }
     });
     </script>
     <script>
-var _hmt = _hmt || [];
-(function() {
-  var hm = document.createElement("script");
-  hm.src = "//hm.baidu.com/hm.js?4885d4801a9165728eb7f55c1584a298";
-  var s = document.getElementsByTagName("script")[0]; 
-  s.parentNode.insertBefore(hm, s);
-})();
-</script>
-
+    var _hmt = _hmt || [];
+    (function() {
+        var hm = document.createElement("script");
+        hm.src = "//hm.baidu.com/hm.js?4885d4801a9165728eb7f55c1584a298";
+        var s = document.getElementsByTagName("script")[0];
+        s.parentNode.insertBefore(hm, s);
+    })();
+    </script>
 </body>
 
 </html>
