--- a/m_index.html
+++ b/m_index.html
@@ -19,9 +19,9 @@
     <header>
         <section class="title"><span class="name_cn">黄诗琦</span><span class="name_en">Huang Shiqi</span></section>
         <section class="contract"><span class="phone">(+86)18552040450</span>|<span class="email">602312121@qq.com</span></section>
-        <a href="javascript:;" class="more nav_animate_remove" onclick="moreEvent()"><img src="images/m/more.svg"></a>
+        <a href="javascript:;" class="more" onclick="moreEvent()"><img src="images/m/more.svg"></a>
     </header>
-    <nav id="nav">
+    <nav id="nav" class="nav_animate_remove">
         <ul>
             <li><a href="#element1">ABOUT ME</a></li>
             <li><a href="#element2">个人资料</a></li>
@@ -234,15 +234,17 @@
         });
         $('nav').css('top', $('header').height() + 10 + 'px');
         $('img').css('max-height', $('body').height() - 50 + 'px');
+
+        $('nav li a').on('click', function() {
+            moreEvent();
+        });
     });
 
     function moreEvent() {
-        if ($('.more').hasClass('nav_animate_remove')) {
-            $('.more').removeClass('nav_animate_remove');
-            $('.more').addClass('nav_animate');
-        }else{
-        	$('.more').addClass('nav_animate_remove');
-            $('.more').removeClass('nav_animate');
+        if ($('.nav_animate_remove').size() > 0) {
+            $('.nav_animate_remove').addClass('nav_animate').removeClass('nav_animate_remove');
+        } else {
+            $('.nav_animate').addClass('nav_animate_remove').removeClass('nav_animate');
         }
     }
     window.location.href = "#element1";
