--- a/oppo/index.html
+++ b/oppo/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<!-- saved from url=(0055)file:///C:/Users/Administrator/Downloads/oppo/oppo.html -->
-<html class=" js no-touch backgroundsize cssanimations csstransforms svg inlinesvg"><!-- Added by HTTrack --><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  
+<html class=" js no-touch backgroundsize cssanimations csstransforms svg inlinesvg">
+<!-- Added by HTTrack -->
+
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=9; IE=8; IE=EDGE">
   <meta content="width=device-width,initial-scale=1, user-scalable=no" name="viewport">
   <title>OPPO手机</title>
-  <link media="all" type="text/css" rel="stylesheet" href="./OPPO手机_files/styles.css">
+  <link media="all" type="text/css" rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -68,10 +71,13 @@
         </a>
         <div class="logo logo-extend">
           <a href="javascript:;">
-            <img src="./OPPO手机_files/oppo_logo.png">
-        </a></div><a href="javascript:;">
-        </a><a class="js-open-user" href="javascript:;">
-          <img src="./OPPO手机_files/icon-menu-user.png">
+            <img src="imgs/oppo_logo.png">
+          </a>
+        </div>
+        <a href="javascript:;">
+        </a>
+        <a class="js-open-user" href="javascript:;">
+          <img src="imgs/icon-menu-user.png">
         </a>
         <div class="main-menu">
           <div class="search"></div>
@@ -125,7 +131,7 @@
             <div class="hero-image center">
               <a href="http://hd.oppo.com/act/2016/a59/index.html">
                 <picture>
-                  <img src="./OPPO手机_files/20160608100603ZEaIiNCILnIfx030.jpg">
+                  <img src="imgs/20160608100603ZEaIiNCILnIfx030.jpg">
                 </picture>
               </a>
             </div>
@@ -146,7 +152,7 @@
           <div class="gi lap-one-half">
             <div class="feature-product">
               <a href="javascript:;">
-                <img alt="OPPO R9" class="feature-product-image" src="./OPPO手机_files/201603170303060rkCBraj8kRGtwBw.jpg">
+                <img alt="OPPO R9" class="feature-product-image" src="imgs/201603170303060rkCBraj8kRGtwBw.jpg">
                 <div class="feature-product-content">
                   <h2 class="feature-product-heading"></h2>
                   <p class="feature-product-description">
@@ -159,7 +165,7 @@
           <div class="gi lap-one-half">
             <div class="feature-product">
               <a href="javascript:;">
-                <img alt="OPPO R9 Plus" class="feature-product-image" src="./OPPO手机_files/20160317030310wjDr1KMnikueo3pB.jpg">
+                <img alt="OPPO R9 Plus" class="feature-product-image" src="imgs/20160317030310wjDr1KMnikueo3pB.jpg">
                 <div class="feature-product-content">
                   <h2 class="feature-product-heading"></h2>
                   <p class="feature-product-description">
@@ -181,7 +187,7 @@
             </h2>
             <h3 class="h-epsilon"><a href="javascript:;">了解OPPO品牌故事</a></h3>
             <div class="video home-media-image">
-              <a href="javascript:;"><img src="./OPPO手机_files/exploration.jpg" class="video-bg"></a>
+              <a href="javascript:;"><img src="imgs/exploration.jpg" class="video-bg"></a>
             </div>
           </section>
           <section class="gi one-whole lap-one-third">
@@ -190,26 +196,26 @@
             </h2>
             <h3 class="h-epsilon"><a href="javascript:;">了解OPPO最新市场动态</a></h3>
             <article class="news">
-              <a href="javascript:;"><img class="news-photo" src="./OPPO手机_files/20160615030623eEoWJXvURkdVPzQs.jpg"></a>
+              <a href="javascript:;"><img class="news-photo" src="imgs/20160615030623eEoWJXvURkdVPzQs.jpg"></a>
               <div class="news-text">
                 <p><a href="javascript:;">惊艳产品引燃市场 OPPO R9系列每1.1秒销售一部</a></p>
               </div>
             </article>
             <article class="news">
-              <a href="javascript:;"><img class="news-photo" src="./OPPO手机_files/20160531100548axCY2oGStUcgyxzD.jpg"></a>
+              <a href="javascript:;"><img class="news-photo" src="imgs/20160531100548axCY2oGStUcgyxzD.jpg"></a>
               <div class="news-text">
                 <p><a href="javascript:;">你的双手是孩子温暖的依靠  OPPO六一行动</a></p>
               </div>
             </article>
             <article class="news">
-              <a href="javascript:;"><img class="news-photo" src="./OPPO手机_files/20160518050533Qkaw6PuXlxIrvruN.jpg"></a>
+              <a href="javascript:;"><img class="news-photo" src="imgs/20160518050533Qkaw6PuXlxIrvruN.jpg"></a>
               <div class="news-text">
                 <p><a href="javascript:;">OPPO手机拍大片 微笑的你原来这么美</a></p>
               </div>
             </article>
           </section>
           <section class="gi one-whole lap-one-third home-media-weibo" id="home-media-weibo">
-            <img src="./OPPO手机_files/wb_pic.png">
+            <img src="imgs/wb_pic.png">
           </section>
         </div>
       </div>
@@ -219,7 +225,7 @@
         <div class="wrapper g">
           <div class="access-icon gi lap-one-quarter one-half">
             <a href="javascript:;">
-              <img alt="OPPO会员" src="./OPPO手机_files/20150424100432DUzqqHBZFJg0niWe.jpg">
+              <img alt="OPPO会员" src="imgs/20150424100432DUzqqHBZFJg0niWe.jpg">
               <div class="content">
                 <h3 class="heading">会员好礼</h3>
                 <div class="badge-icon xl">
@@ -230,7 +236,7 @@
           </div>
           <div class="access-icon gi lap-one-quarter one-half">
             <a href="javascript:;">
-              <img alt="OPPO帮助中心" src="./OPPO手机_files/20160331110347afJ6qtaHbzwKtUAj.jpg">
+              <img alt="OPPO帮助中心" src="imgs/20160331110347afJ6qtaHbzwKtUAj.jpg">
 
               <div class="content">
                 <h3 class="heading">需要帮助？</h3>
@@ -243,7 +249,7 @@
           </div>
           <div class="access-icon gi lap-one-quarter one-half">
             <a href="javascript:;">
-              <img alt="OPPO体验店" src="./OPPO手机_files/20150424100444ruMPRGfyZKZiSxE7.jpg">
+              <img alt="OPPO体验店" src="imgs/20150424100444ruMPRGfyZKZiSxE7.jpg">
 
               <div class="content">
                 <h3 class="heading">附近的体验店</h3>
@@ -256,7 +262,7 @@
           </div>
           <div class="access-icon gi lap-one-quarter one-half">
             <a href="javascript:;">
-              <img alt="OPPO品牌" src="./OPPO手机_files/20150424100426Gyn8aFG8UuFLsUzr.jpg">
+              <img alt="OPPO品牌" src="imgs/20150424100426Gyn8aFG8UuFLsUzr.jpg">
 
               <div class="content">
                 <h3 class="heading">OPPO品牌</h3>
@@ -276,19 +282,19 @@
       <div class="wrapper g">
         <div class="gi lap-one-third">
           <a class="footer-prominent-button primary " href="javascript:;">
-            <span class="img"><img alt="OPPO社区" src="./OPPO手机_files/201502270202233FZ8VzjUJgb2YsLn.png"></span>
+            <span class="img"><img alt="OPPO社区" src="imgs/201502270202233FZ8VzjUJgb2YsLn.png"></span>
             <span class="text">OPPO社区</span>
           </a>
         </div>
         <div class="gi lap-one-third">
           <a class="footer-prominent-button secondary " href="javascript:;">
-            <span class="img"><img alt="OPPO ColorOS" src="./OPPO手机_files/20150227020237clUXgMcj3UhukiC0.png"></span>
+            <span class="img"><img alt="OPPO ColorOS" src="imgs/20150227020237clUXgMcj3UhukiC0.png"></span>
             <span class="text">ColorOS</span>
           </a>
         </div>
         <div class="gi lap-one-third">
           <a class="footer-prominent-button primary " href="javascript:;">
-            <span class="img"><img alt="OPPO软件商店" src="./OPPO手机_files/20150314030306RfYFRTucS1nB3wtQ.png"></span>
+            <span class="img"><img alt="OPPO软件商店" src="imgs/20150314030306RfYFRTucS1nB3wtQ.png"></span>
             <span class="text">软件商店</span>
           </a>
         </div>
@@ -403,7 +409,7 @@
             </a>
             <a href="javascript:;" id="footer-wx" class="relative">
               <span class="icon icon-wechat"></span>
-              <img src="./OPPO手机_files/wx.png" class="wx-float">
+              <img src="imgs/wx.png" class="wx-float">
             </a>
             <a href="javascript:;" class="text text-link">加入我们</a>
             <a href="javascript:;" class="text text-link">采购相关</a>
@@ -456,4 +462,6 @@
   <div class="js-sensor"></div>
 
 
-</body></html>
+</body>
+
+</html>
