--- a/m_index.html
+++ b/m_index.html
@@ -26,11 +26,11 @@
             <li><a href="#element1">ABOUT ME</a></li>
             <li><a href="#element2">个人资料</a></li>
             <li><a href="#element3">兴趣爱好</a></li>
-            <li><a href="#element4">海报设计</a></li>
-            <li><a href="#element5">书籍封面设计</a></li>
-            <li><a href="#element6">网页设计</a></li>
+            <li><a href="#element4">网页设计</a></li>
+            <li><a href="#element5">海报设计</a></li>
+            <li><a href="#element6">书籍封面设计</a></li>
             <li><a href="#element7">APP图标设计</a></li>
-            <li><a href="#element8">卡通人物设计</a></li>
+            <li><a href="#element8">APP界面设计</a></li>
             <li><a href="#element9">END</a></li>
         </ul>
     </nav>
@@ -57,9 +57,9 @@
         </section>
         <section id="element2">
             <h1>目前状态</h1>
-            <p>入职于无锡联想科技有限公司 </p>
+            <p>求职中</p>
             <h1>个人评价</h1>
-            <p>对工作充满激情，能够积极主动的按质按量完成工作任务，有较强的团队协作能力，有一定的组织、协调能力，擅于发现问题。学习能力强、执行力强、思维缜密、保密意识强、有勇于承担责任的态度。不计个人得失，以公司利益为重。</p>
+            <p>你好，我叫黄诗琦，对工作充满激情，能够积极主动的，在独立思考的情况下按质按量完成工作任务，有较强的团队合作意识，有一定的组织、协调能力，擅于发现问题。学习能力强、执行力强、思维缜密、保密意识强、有勇于承担责任态度。不计个人得失，以公司利益为重。希望能成为贵公司的一员，为公司尽自己的一份心力。我初出茅庐，阅历尚浅，但我学的很快，如果贵公司正缺一位极具潜力的设计师，请你联系我。</p>
         </section>
         <section id="element3">
             <h1>兴趣爱好Hobbies</h1>
@@ -75,37 +75,22 @@
                 <div class="swiper-wrapper">
                     <!-- Slides -->
                     <div class="swiper-slide">
-                        <img src="images/haibao/01.jpg" />
+                        <img src="images/wangzhan/1.jpg" />
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/haibao/02.jpg" />
+                        <img src="images/wangzhan/2.jpg" />
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/haibao/03.jpg" />
+                        <img src="images/wangzhan/3.jpg" />
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/haibao/04.jpg" />
+                        <img src="images/wangzhan/4.jpg" />
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/haibao/05.jpg" />
+                        <img src="images/wangzhan/5.jpg" />
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/haibao/06.jpg" />
-                    </div>
-                    <div class="swiper-slide">
-                        <img src="images/haibao/07.jpg" />
-                    </div>
-                    <div class="swiper-slide">
-                        <img src="images/haibao/08.jpg" />
-                    </div>
-                    <div class="swiper-slide">
-                        <img src="images/haibao/09.png" />
-                    </div>
-                    <div class="swiper-slide">
-                        <img src="images/haibao/10.jpg" />
-                    </div>
-                    <div class="swiper-slide">
-                        <img src="images/haibao/11.jpg" />
+                        <img src="images/wangzhan/6.jpg" />
                     </div>
                 </div>
                 <!-- If we need pagination -->
@@ -122,13 +107,13 @@
                 <div class="swiper-wrapper">
                     <!-- Slides -->
                     <div class="swiper-slide">
-                        <img src="images/shuji/01.jpg" />
+                        <img src="images/haibao/1.jpg" />
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/shuji/02.jpg" />
+                        <img src="images/haibao/2.jpg" />
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/shuji/03.jpg" />
+                        <img src="images/haibao/3.jpg" />
                     </div>
                 </div>
                 <!-- If we need pagination -->
@@ -145,13 +130,10 @@
                 <div class="swiper-wrapper">
                     <!-- Slides -->
                     <div class="swiper-slide">
-                        <img src="images/wangzhan/01.jpg" />
+                        <img src="images/shuji/1.jpg" />
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/wangzhan/02.jpg" />
-                    </div>
-                    <div class="swiper-slide">
-                        <img src="images/wangzhan/03.jpg" />
+                        <img src="images/shuji/2.jpg" />
                     </div>
                 </div>
                 <!-- If we need pagination -->
@@ -168,19 +150,10 @@
                 <div class="swiper-wrapper">
                     <!-- Slides -->
                     <div class="swiper-slide">
-                        <img src="images/tubiao/01.png" />
+                        <img src="images/tubiao/1.jpg" />
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/tubiao/02.png" />
-                    </div>
-                    <div class="swiper-slide">
-                        <img src="images/tubiao/03.jpg" />
-                    </div>
-                    <div class="swiper-slide">
-                        <img src="images/tubiao/04.png" />
-                    </div>
-                    <div class="swiper-slide">
-                        <img src="images/tubiao/05.png" />
+                        <img src="images/tubiao/2.jpg" />
                     </div>
                 </div>
                 <!-- If we need pagination -->
@@ -197,13 +170,10 @@
                 <div class="swiper-wrapper">
                     <!-- Slides -->
                     <div class="swiper-slide">
-                        <img src="images/katongrenwu/01.png" />
+                        <img src="images/jiemian/1.jpg" />
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/katongrenwu/02.png" />
-                    </div>
-                    <div class="swiper-slide">
-                        <img src="images/katongrenwu/03.png" />
+                        <img src="images/jiemian/2.jpg" />
                     </div>
                 </div>
                 <!-- If we need pagination -->
